--- a/Exercise I/style.css
+++ b/Exercise I/style.css
@@ -1,69 +1,153 @@
-* {
-  margin: 0;
+html {
+  background-image: url("./img/freljhord.jpg");
+  background-size: cover;
+}
+body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #2c2c2c;
+  margin: 0px;
+  /* background: #f7f7f7; */
+  display: grid;
+  gap: 60px;
+  justify-items: center;
+  margin-top: 60px;
 }
 
 h1 {
-  display: flex;
-  position: relative;
-  align-content: center;
-  justify-content: center;
-  font-size: 40px;
-  margin-top: 60px;
-  margin-bottom: 70px;
+  max-width: 100%;
+  display: block;
+  padding-bottom: 40px;
 }
-button {
-  padding: 10px;
-  width: 100px;
-  border-radius: 4px;
-  color: #000;
-  background-color: #191970;
-  margin-top: 10px;
-}
-.links {
-  text-align: center;
-  display: grid;
-  justify-content: center;
-  place-content: center;
-  /* padding-right: 20px; */
-  border: 1px #fff;
-}
-.item {
-  display: grid;
-  border: 1px solid #f7f7f7;
-  /* place-content: center; */
-  /* justify-content: center; */
-  padding: 20px;
-}
-.container {
-  display: grid;
-  grid-template-columns: 600px 600px;
-  height: 500px;
-  justify-content: center;
-  margin-top: 60px;
-}
-ul,
+
 a {
   text-decoration: none;
-  list-style: none;
-  color: black;
-  font-size: 30px;
+  transition: 0.4s;
+}
+a:hover {
+  background-color: #2506af;
+  font-size: 1.3rem;
+}
+
+p,
+h1,
+h2,
+h3 {
+  margin: 0px;
+}
+
+p {
+  font-size: 20px;
+  line-height: 1.3;
+}
+
+.menu {
   display: flex;
-  justify-content: space-between;
-  padding-top: 20px;
-  /* border: 1px solid #fff; */
-  padding: 5px;
-  padding-bottom: 10px;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
 }
-img {
-  height: 200px;
-  width: 400px;
+
+.menu a {
+  background: #ffffff;
+  padding: 15px 30px;
+  border-radius: 4px;
+  color: #000000;
+  text-transform: uppercase;
 }
-a {
-  border: 1px #fff;
-  background-color: #191970;
-  margin-left: 40px;
-  border-radius: 3px;
+
+.conteudo {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 1000px;
+}
+
+.introducao {
+  background: #fff;
+  padding: 40px;
+  text-align: right;
+  position: relative;
+  display: grid;
+  gap: 20px;
+  align-content: center;
+  justify-items: end;
+}
+
+.detalhe {
+  width: 60px;
+  height: 4px;
+  background: rgb(189, 90, 247);
+  position: absolute;
+  top: 30px;
+  right: -30px;
+}
+
+.botao {
+  background: rgb(71, 28, 226);
+  color: #fff;
+  padding: 15px 30px;
+  border-radius: 4px;
+  text-transform: uppercase;
+}
+
+.subtitulo {
+  font-size: 64px;
+  text-transform: uppercase;
+  color: rgba(0, 0, 0, 0.2);
+  text-align: right;
+  padding: 40px;
+  align-self: center;
+}
+
+.vantagens {
+  background: #fff;
+  padding: 40px;
+}
+
+.vantagens-item {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 10px 20px;
+  padding: 20px;
+}
+
+.vantagens-item p {
+  grid-column: 3;
+  font-size: 15px;
+  margin-top: -100px;
+}
+.vantagens-item:first-child {
+  background-color: #a09595;
+}
+.vantagens-item:nth-child(3) {
+  background-color: #a09595;
+}
+/* .vantagens-item:hover {
+  content: "";
+  background-color: rgb(158, 98, 248);
+  width: 6px;
+  height: 138px;
+  display: block;
+} */
+
+.vantagens-item::before {
+  content: "";
+  background-color: rgb(158, 98, 248);
+  width: 4px;
+  height: 138px;
+  display: block;
+  right: 20px;
+}
+p {
+  margin-top: -35px;
+}
+.rodape {
+  background: #fff;
+  width: 100%;
   text-align: center;
+  padding: 40px;
+  box-sizing: border-box;
+}
+.photo {
+  width: 500px;
+  height: 300px;
+  border: 1px solid rgb(15, 7, 129);
 }
