--- a/Exercise I/style.css
+++ b/Exercise I/style.css
@@ -1,9 +1,10 @@
+@import url(//db.onlinewebfonts.com/c/12420e8c141ca7c3dff41de2d59df13e?family=BeaufortforLOL-Bold);
 html {
-  background-image: url("./img/freljhord.jpg");
+  background-color: #111318;
   background-size: cover;
 }
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: BeaufortforLOL-Bold;
   margin: 0px;
   /* background: #f7f7f7; */
   display: grid;
@@ -13,18 +14,46 @@ body {
 }
 
 h1 {
+  font-size: 5rem;
+  max-width: 100vw;
+  display: block;
+  justify-content: center;
+  padding-bottom: 40px;
+  transition: 0.2s;
+  letter-spacing: 20.8px;
+  color: rgb(103, 71, 31); background: -webkit-linear-gradient(bottom, rgb(103, 71, 31), rgb(203, 172, 98)) text;"
+  
+}
+
+.icon-1 {
+  display: block;
+  justify-content: center;
+  top: -50px;
+  position:relative;
+  max-width: 100vw;
+  
+}
+
+h2 {
+  font-size: 2rem;
   max-width: 100%;
   display: block;
   padding-bottom: 40px;
 }
-
-a {
+li {
+  text-decoration: none;
+  list-style: none;
+}
+.menu a {
   text-decoration: none;
   transition: 0.4s;
+  border: 3px solid transparent;
+ 
 }
-a:hover {
-  background-color: #2506af;
-  font-size: 1.3rem;
+.menu a:hover {
+  border: 3px solid #937341;
+  /* background-color: #937341; */
+  font-size: 1rem;
 }
 
 p,
@@ -38,7 +67,17 @@ p {
   font-size: 20px;
   line-height: 1.3;
 }
-
+.walpaper {
+  height: 600px;
+  max-width: 100vw;
+  border: 2px solid #937341;
+}
+audio {
+  display: block;
+  position: relative;
+  top: -60px;
+  margin-left: 13px;
+}
 .menu {
   display: flex;
   flex-wrap: wrap;
@@ -74,20 +113,39 @@ p {
 .detalhe {
   width: 60px;
   height: 4px;
-  background: rgb(189, 90, 247);
+  background: #937341;
   position: absolute;
   top: 30px;
   right: -30px;
 }
 
-.botao {
-  background: rgb(71, 28, 226);
-  color: #fff;
-  padding: 15px 30px;
-  border-radius: 4px;
+button {
+  align-items: flex-start;
+  background-color: #191c21;
+  border-color: #767676;
+  border-style: solid;
+  border-width: 2px;
+  color: #937341;
+  font-size: 14px;
+  letter-spacing: 2px;
+  padding: 23px 48px;
+  text-align: center;
   text-transform: uppercase;
 }
+button:hover {
+  background-color: #5c4726;
+  color: #000;
+}
+.container5 {
+  display: grid;
+  justify-content: center;
+  margin-bottom: 100px;
+}
 
+.image-2 {
+  display: grid;
+  justify-content: center;
+}
 .subtitulo {
   font-size: 64px;
   text-transform: uppercase;
@@ -98,8 +156,23 @@ p {
 }
 
 .vantagens {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   background: #fff;
   padding: 40px;
+  width: 920px;
+}
+/* .icon-4 {
+  display: grid;
+  justify-self: center;
+  padding-bottom: 150px;
+  padding-top: 80px;
+} */
+video {
+  grid-column: 1 / 3;
+  padding: 40px;
+  padding-right: 30px;
+  justify-items: center;
 }
 
 .vantagens-item {
@@ -107,6 +180,7 @@ p {
   grid-template-columns: auto 1fr;
   gap: 10px 20px;
   padding: 20px;
+  border-left: 2px solid transparent;
 }
 
 .vantagens-item p {
@@ -114,12 +188,19 @@ p {
   font-size: 15px;
   margin-top: -100px;
 }
-.vantagens-item:first-child {
+.vantagens-item:hover {
+  border-left: 2px solid #937341;
+  background-color: #807a7a;
+}
+.vantagens:nth-child(even){
+  background-color: #767676;
+}
+/* .vantagens-item:first-child {
   background-color: #a09595;
 }
-.vantagens-item:nth-child(3) {
+.vantagens-item:nth-child(1) {
   background-color: #a09595;
-}
+} */
 /* .vantagens-item:hover {
   content: "";
   background-color: rgb(158, 98, 248);
@@ -130,7 +211,7 @@ p {
 
 .vantagens-item::before {
   content: "";
-  background-color: rgb(158, 98, 248);
+  background-color: #5c4726;
   width: 4px;
   height: 138px;
   display: block;
@@ -139,15 +220,21 @@ p {
 p {
   margin-top: -35px;
 }
-.rodape {
+footer {
+  display: grid;
   background: #fff;
   width: 100%;
   text-align: center;
   padding: 40px;
   box-sizing: border-box;
 }
+.indicative {
+  display: inline-block;
+
+  width: 150px;
+}
 .photo {
   width: 500px;
-  height: 300px;
-  border: 1px solid rgb(15, 7, 129);
+  height: 309px;
+  border: 1px solid #937341;
 }
